--- a/starterTemplate/App.xaml
+++ b/starterTemplate/App.xaml
@@ -1,8 +1,6 @@
-﻿<Application
-    x:Class="starterTemplate.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:starterTemplate"
-    StartupUri="MainWindow.xaml">
+﻿<Application x:Class="starterTemplate.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:starterTemplate">
     <Application.Resources />
 </Application>
