--- a/starterTemplate/MainWindow.xaml
+++ b/starterTemplate/MainWindow.xaml
@@ -3,14 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:starterTemplate"
+        xmlns:vm="clr-namespace:starterTemplate.ViewModels"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="MainWindow"
+        Title="{Binding Title}"
         Width="800"
         Height="450"
+        d:DataContext="{d:DesignInstance vm:MainWindowViewModel}"
         mc:Ignorable="d">
     <Grid>
-        <TextBlock HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="{Binding Version}" />
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="{Binding Version}" 
+                      FontSize="24"
+                      HorizontalAlignment="Center"
+                      Margin="0,0,0,20"/>
+            <Button Content="About" 
+                   Command="{Binding ShowAboutCommand}"
+                   Padding="20,10"
+                   MinWidth="100"/>
+        </StackPanel>
     </Grid>
 </Window>
